<resources>
    <string name="app_name">PlantMe-NJ</string>
    <string name="home_screen_title">Welcome to PlantMe-NJ</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="more_options_title">More Options</string>
    <string name="gallery_title">Gallery</string>
    <string name="last_viewed_title">Last Viewed</string>
    <string name="home_weather_screen">Location:</string>
    <string name="home_weather_conditions">Conditions:</string>
    <string name="home_weather_temp">Temperature:</string>
    <string name="home_weather_real_feel">Real Feel:</string>
    <string name="home_weather_sunrise">Sunrise:</string>
    <string name="home_weather_sunset">Sunset:</string>
    <string name="home_weather_humidity">Humidity:</string>
    <string name="home_weather_wind">Wind:</string>
    <string name="plant_spot_advice_title">Planting Spot Advice</string>
    <string name="plant_spot_advice_direction">Please Select a Plant</string>
    <string name="ar_plant_title">Plants in AR</string>
    <string name="ar_plant_direction">Please Select a Plant</string>
    <string name="plant_types_title">Plant Types vs Seasons</string>
    <string name="plant_types_direction">Please Select an Option</string>
    <string name="plant_types_option1">Plant Type</string>
    <string name="plant_types_option2">Season</string>
    <string name="plant_types_explore_types">Explore the plant types</string>
    <string name="plant_types_perennial">Perennial</string>
    <string name="plant_types_annual">Annual</string>
    <string name="plant_types_explore_season">Explore the seasons</string>
    <string name="plant_types_cool">Cool</string>
    <string name="plant_types_warm">Warm</string>
    <string name="plant_types_selected_perennial_title">Perennial Plants</string>
    <string name="plant_types_selected_annual_title">Annual Plants</string>
    <string name="plant_types_selected_cool_title">Cool Plants</string>
    <string name="plant_types_selected_warm_title">Warm Plants</string>
    <string name="plant_types_selected_direction">Please select a plant</string>
    <string name="plant1">Bell Pepper</string>
    <string name="plant2">Chives</string>
    <string name="plant3">Jalapeño</string>
    <string name="plant4">Lettuce</string>
    <string name="plant5">Radish</string>
    <string name="plant6">Strawberry</string>
    <string name="plant7">Tomato</string>
    <string name="plant8">Watermelon</string>
    <string name="plant_individual_about_me">About Me:</string>
    <string name="plant_individual_season">Season:</string>
    <string name="plant_individual_plant_type">Plant Type:</string>
    <string name="plant_individual_environment">Environment:</string>
    <string name="plant_individual_lighting_time">Lighting Time:</string>
    <string name="plant_individual_indoor_planting_time">Indoor Planting Time:</string>
    <string name="plant_individual_outdoor_planting_time">Outdoor Planting Time:</string>
    <string name="plant_individual_planting_distance">Planting Distance:</string>
    <string name="plant_individual_planting_distance_depth">Planting Distance Depth:</string>
    <string name="plant_individual_watering_time">Watering Time:</string>
    <string name="plant_individual_maturity">Maturity:</string>
    <string name="viking">Viking</string>
    <string name="cannon">Cannon</string>
    <string name="target">Target</string>
    <string name="camera_permission_toast">Camera permission is needed to run this application</string>
    <string name="searching_for_surfaces">Searching for surfaces...</string>
    <string name="ar_device_support">This device does not support AR</string>
    <string name="camera_not_available">Camera not available. Try restarting the app.</string>
    <string name="arcore_install_failed">Unexpected failure during ArCoreApk install request</string>
    <string name="please_install_arcore">Please install ARCore</string>
    <string name="please_update_arcore">Please update ARCore</string>
    <string name="please_update_app">Please update this app</string>
    <string name="arcore_not_supported">This device does not support AR</string>
    <string name="failed_to_create_session">Failed to create AR session</string>
    <string name="camera_permission_needed">Camera permission is needed to run this application</string>
    <string name="model_grid_png">models/trigrid.png</string>
    <string name="model_viking_obj">models/viking.obj</string>
    <string name="model_viking_png">models/viking.png</string>
    <string name="model_cannon_obj">models/cannon.obj</string>
    <string name="model_cannon_png">models/cannon.png</string>
    <string name="model_target_obj">models/target.obj</string>
    <string name="model_target_png">models/target.png</string>
    <string name="model_chives_obj">models/plant_models/chives/chives_model.obj</string>
    <string name="model_chives_png">models/viking.png</string>
    <string name="model_watermelon_obj">models/plant_models/watermelon/source/watermelon_official.obj</string>
    <string name="model_watermelon_png">models/plant_models/watermelon/textures/Watermelon_diffuse.png</string>
    <string name="model_strawberry_obj">models/plant_models/strawberry/source/strawberry_official.obj</string>
    <string name="model_strawberry_png">models/plant_models/strawberry/textures/straw_leave.png</string>
    <string name="model_lettuce_obj">models/plant_models/lettuce/source/Lettuce_official.obj</string>
    <string name="model_lettuce_png">models/plant_models/lettuce/textures/marulyapragı.png</string>
    <string name="model_bell_pepper_obj">models/plant_models/bell-pepper/source/Bell_pepper_multicolor_SF/Bell_pepper_multicolor_SF.obj</string>
    <string name="model_bell_pepper_png">models/plant_models/bell-pepper/textures/Bell_pepper_multicolor.jpeg</string>
    <string name="model_radish_obj">models/plant_models/red-radish/OFFICIAL_RADISH.obj</string>
    <string name="model_radish_png">models/plant_models/red-radish/textures/gltf_embedded_0.jpeg</string>
    <string name="model_jalapeno_obj">models/plant_models/jalapeno-plant/source/jalapeno-SF/jalapeno-plant.obj</string>
    <string name="model_jalapeno_png">models/plant_models/jalapeno-plant/textures/jal-albedo2.png</string>
    <string name="model_tomato_obj">models/plant_models/tomato/tomato_plant.obj</string>
    <string name="model_tomato_png">models/plant_models/tomato/tomato_plant.fbm/Cartoon_Farm_Crops_Tomato_Plant_Albedo.png</string>
    <string name="failed_to_read_asset">Failed to read an asset file</string>
    <string name="exception_on_opengl">Exception on the OpenGL thread</string>
    <string-array name="perennial_plants">
        <item>Asparagus</item>
        <item>Strawberries</item>
        <item>Horseradish</item>
        <item>Blueberries</item>
    </string-array>
    <string-array name="annual_plants">
        <item>Broccoli</item>
        <item>Cabbage</item>
        <item>Corn</item>
        <item>Tomato</item>
    </string-array>
    <string-array name="cool_crops">
        <item>Asparagus</item>
        <item>Blueberries</item>
        <item>Broccoli</item>
        <item>Cabbage</item>
        <item>Corn</item>
        <item>Strawberries</item>
    </string-array>
    <string-array name="warm_crops">
        <item>Horseradish</item>
        <item>Tomato</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_plant_suggestions">PlantSuggestionsActivity</string>
</resources>