<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.cool_plants.CoolPlantsActivity">

    <TextView
        android:id="@+id/cool_plants_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/turquoise"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/plant_types_selected_cool_title"
        android:gravity="center"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cool_plants_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_below="@id/cool_plants_title"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/turquoise"
        android:textSize="20sp"
        android:text="@string/plant_types_selected_direction"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/PlantCool1"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_below="@id/cool_plants_direction"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:drawableTop="@drawable/chives"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:text="@string/plant2"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/dark_navy"
        app:layout_constraintBottom_toTopOf="parent" />

    <Button
        android:id="@+id/PlantCool2"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_below="@id/cool_plants_direction"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/PlantCool1"
        android:drawableTop="@drawable/lettuce"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:text="@string/plant4"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/dark_navy"
        app:layout_constraintBottom_toTopOf="parent" />

    <Button
        android:id="@+id/PlantCool3"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_below="@id/PlantCool1"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:drawableTop="@drawable/radish"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:text="@string/plant5"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/dark_navy"
        app:layout_constraintBottom_toTopOf="parent" />

    <Button
        android:id="@+id/PlantCool4"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_below="@id/PlantCool2"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/PlantCool3"
        android:drawableTop="@drawable/strawberries"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:text="@string/plant6"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/dark_navy"
        app:layout_constraintBottom_toTopOf="parent" />
</RelativeLayout>

