<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.plant_types.PlantTypesFragment">

    <TextView
        android:id="@+id/plant_v_season_title"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/turquoise"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/plant_types_title"
        android:gravity="center"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/plant_v_season_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_below="@id/plant_v_season_title"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/turquoise"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/plant_types_direction"
        android:gravity="center"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/plantTypeButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@id/plant_v_season_statement"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_corner"
        android:drawableLeft="@drawable/icons_filled_plant"
        android:text="@string/plant_types_option1"
        android:fontFamily="@font/roboto_bold"
        android:textAllCaps="false"
        android:textColor="@color/turquoise"
        android:textSize="30sp" />

    <Button
        android:id="@+id/seasonTypeButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@id/plantTypeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded_corner"
        android:drawableLeft="@drawable/icons_filled_season"
        android:text="@string/plant_types_option2"
        android:fontFamily="@font/roboto_bold"
        android:textAllCaps="false"
        android:textColor="@color/turquoise"
        android:textSize="30sp" />

</RelativeLayout>