<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.warm_plants.WarmPlantsActivity">

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:src="@drawable/icons_filled_back_button_v3" />

    <TextView
        android:id="@+id/warm_plants_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/turquoise"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/plant_types_selected_warm_title"
        android:gravity="center"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/warm_plants_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_below="@id/warm_plants_title"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/turquoise"
        android:textSize="20sp"
        android:text="@string/plant_types_selected_direction"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/PlantWarm1"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_below="@id/warm_plants_direction"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:drawableTop="@drawable/bell_peppers"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:text="@string/plant1"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/dark_navy"
        app:layout_constraintBottom_toTopOf="parent" />

    <Button
        android:id="@+id/PlantWarm2"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_below="@id/warm_plants_direction"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/PlantWarm1"
        android:drawableTop="@drawable/jalapenos"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:text="@string/plant3"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/dark_navy"
        app:layout_constraintBottom_toTopOf="parent" />

    <Button
        android:id="@+id/PlantWarm3"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_below="@id/PlantWarm1"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:drawableTop="@drawable/tomatoes"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:text="@string/plant7"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/dark_navy"
        app:layout_constraintBottom_toTopOf="parent" />

    <Button
        android:id="@+id/PlantWarm4"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_below="@id/PlantWarm2"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/PlantWarm3"
        android:drawableTop="@drawable/watermelon"
        android:padding="10dp"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:text="@string/plant8"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textColor="@color/dark_navy"
        app:layout_constraintBottom_toTopOf="parent" />

</RelativeLayout>