<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.more_options.MoreOptionsFragment">

    <TextView
        android:id="@+id/title_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/turquoise"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/more_options_title"
        android:gravity="center"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/gallery"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@id/title_more"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corner"
        android:text="@string/gallery_title"
        android:textAllCaps="false"
        android:textColor="@color/turquoise"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/last_viewed"
        android:layout_marginVertical="@dimen/activity_horizontal_margin"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@id/gallery"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corner"
        android:text="@string/last_viewed_title"
        android:textAllCaps="false"
        android:textColor="@color/turquoise"
        android:textSize="25sp"/>

</RelativeLayout>